# web-crawler

./: README.md  pyproject.toml
test/: conftest.py  integration_test.py  test_aiohttp_fetcher.py  test_crawler.py  test_link_processor.py
web_crawler/: __main__.py  crawler.py  link_processor.py
web_crawler/crawling/: common.py  crawling_worker_aiohttp.py
web_crawler/fetcher/: aiohttp_fetcher.py  common.py
