[project]
name = "web-crawler"
version = "0.1.0"
description = ""
authors = [
    {name = "Fangyi Zhou",email = "me@fangyi.io"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "aiohttp (>=3.11.13,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "tenacity (>=9.0.0,<10.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"
poetry = "^2.1.1"
pytest = "^8.3.4"
coverage = "^7.6.12"
pytest-asyncio = "^0.25.3"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
